Plein d'amélioration visuel sur toutes les pages

--- a/html/boissons.html
+++ b/html/boissons.html
@@ -8,7 +8,7 @@
 		 <!--Let browser know website is optimized for mobile-->
 		 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		 <link type="text/css" rel="stylesheet" href="../css/css.css"/>
-       <title>Choisir des ingrédient | Gourmand Pizza</title>
+       <title>Choisir des boissons | Gourmand Pizza</title>
 	  </head>
     	<body class="bodyChoix">
 
@@ -38,24 +38,11 @@
 
           <div class="card">
            <div class="card-image">
-            <img  src="../medias/sauceTomateMaison.jpg">
-           </div>
-           <div class="card-content">
-            <span class="card-title grey-text text-darken-4">
-                <span style="padding : 4px 8px; color:#444;"><b>Sauce tomate maison</b></span>
-                <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier">add_shopping_cart</i>
-            </span>
-           </div>
-         </div>
-
-
-          <div class="card">
-           <div class="card-image">
-             <img src="../medias/farine.jpg">
+             <img src="../medias/iceTea.jpg">
            </div>
            <div class="card-content">
              <span class="card-title grey-text text-darken-4">
-                <span style="padding : 4px 8px; color:#444;"><b>Farine spéciale Pizza</b></span>
+                <span style="padding : 4px 8px; color:#444;"><b>Ice Tea</b></span>
                 <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier2">add_shopping_cart</i>
              </span>
            </div>
@@ -64,11 +51,11 @@
 
          <div class="card">
           <div class="card-image">
-           <img  src="../medias/sauceTomateMaison.jpg">
+           <img  src="../medias/coca.jpg">
           </div>
           <div class="card-content">
            <span class="card-title grey-text text-darken-4">
-               <span style="padding : 4px 8px; color:#444;"><b>Sauce tomate maison</b></span>
+               <span style="padding : 4px 8px; color:#444;"><b>Coca</b></span>
                <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier3">add_shopping_cart</i>
            </span>
           </div>
@@ -76,11 +63,11 @@
 
         <div class="card">
          <div class="card-image">
-          <img src="../medias/farine.jpg">
+          <img src="../medias/iceTea.jpg">
          </div>
          <div class="card-content">
           <span class="card-title grey-text text-darken-4">
-             <span style="padding : 4px 8px; color:#444;"><b>Farine spéciale Pizza</b></span>
+             <span style="padding : 4px 8px; color:#444;"><b>Ice Tea</b></span>
              <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier4">add_shopping_cart</i>
           </span>
          </div>
@@ -88,13 +75,26 @@
 
         <div class="card">
         <div class="card-image">
-          <img  src="../medias/sauceTomateMaison.jpg">
+          <img  src="../medias/coca.jpg">
         </div>
         <div class="card-content">
           <span class="card-title grey-text text-darken-4">
-             <span style="padding : 4px 8px; color:#444;"><b>Sauce tomate maison</b></span>
+             <span style="padding : 4px 8px; color:#444;"><b>Coca</b></span>
              <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier5">add_shopping_cart</i>
           </span>
+        </div>
+      </div>
+
+
+       <div class="card">
+        <div class="card-image">
+         <img  src="../medias/iceTea.jpg">
+        </div>
+        <div class="card-content">
+         <span class="card-title grey-text text-darken-4">
+             <span style="padding : 4px 8px; color:#444;"><b>Ice Tea</b></span>
+             <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier">add_shopping_cart</i>
+         </span>
         </div>
       </div>
 
