--- a/html/choixPizza.html
+++ b/html/choixPizza.html
@@ -8,8 +8,10 @@
 		 <!--Let browser know website is optimized for mobile-->
 		 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		 <link type="text/css" rel="stylesheet" href="../css/css.css"/>
+       <title>Choisir une pizza | Gourmand Pizza</title>
 	  </head>
-    	<body>
+
+    	<body class="bodyChoix">
 
          <!-- Menu -->
          <nav>
@@ -36,16 +38,15 @@
           <!-- Choix de quelle sorte de pizza prendre -->
 
           <div class="btnGroup">
-    			<a href="creationPizza.html" class="btn btnHoraire disactive">Composition</a>
-    			<a href="favorites.html" class="btn btnHoraire disactive">Favorites</a>
-    			<a href="#" class="btn btnHoraire active">Classiques</a>
+    			<a href="creationPizza.html" class="btn btnHoraire disactive waves-effect waves-block waves-light">Composition</a>
+    			<a href="favorites.html" class="btn btnHoraire disactive waves-effect waves-block waves-light">Favorites</a>
+    			<a href="#" class="btn btnHoraire active waves-effect waves-block waves-light">Classiques</a>
     		</div>
 
          <p class="phraseIntro">Commandez votre pizza avant <strong>15min </strong><br />et venez la chercher à <strong>19h</strong></p>
 
 
           <!-- Choix des pizzas -->
-
 
           <div class="card">
            <div class="card-image waves-effect waves-block waves-light">
@@ -54,7 +55,7 @@
            <div class="card-content">
              <span class="card-title grey-text text-darken-4">
                 <span style="padding : 4px 8px; color:#444;" class="activator"><b>Napolitaine</b></span>
-                <i class="small iconPanier material-icons right" id="ajoutPanier">add_shopping_cart</i>
+                <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier">add_shopping_cart</i>
                 <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
              </span>
            </div>
@@ -62,7 +63,7 @@
              <span class="card-title grey-text text-darken-4">Napolitaine<i class="material-icons right">close</i></span>
              <div class="modal-content">
                <p>Base tomate, boeuf, mozzarella, <b>fromage</b>, basilic</p>
-               <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp">add_shopping_cart</i>
+               <i class="small iconPanierPopUp material-icons right waves-effect waves-block waves-light" id="ajoutPanierPopUp">add_shopping_cart</i>
             </div>
            </div>
          </div>
@@ -74,7 +75,7 @@
           <div class="card-content">
            <span class="card-title grey-text text-darken-4">
                <span style="padding : 4px 8px; color:#444;" class="activator"><b>Végétarienne</b></span>
-               <i class="small iconPanier material-icons right" id="ajoutPanier2">add_shopping_cart</i>
+               <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier2">add_shopping_cart</i>
                <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
            </span>
           </div>
@@ -82,7 +83,7 @@
            <span class="card-title grey-text text-darken-4">Végétarienne<i class="material-icons right">close</i></span>
            <div class="modal-content">
              <p>Base tomate, tomate cerise, <b>fromage</b>, basilic</p>
-             <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp2">add_shopping_cart</i>
+             <i class="small iconPanierPopUp material-icons right waves-effect waves-block waves-light" id="ajoutPanierPopUp2">add_shopping_cart</i>
            </div>
           </div>
         </div>
@@ -94,7 +95,7 @@
          <div class="card-content">
           <span class="card-title grey-text text-darken-4">
              <span style="padding : 4px 8px; color:#444;" class="activator"><b>Napolitaine</b></span>
-             <i class="small iconPanier material-icons right" id="ajoutPanier3">add_shopping_cart</i>
+             <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier3">add_shopping_cart</i>
              <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
           </span>
          </div>
@@ -102,7 +103,7 @@
           <span class="card-title grey-text text-darken-4">Napolitaine<i class="material-icons right">close</i></span>
           <div class="modal-content">
            <p>Base tomate, boeuf, mozzarella, <b>fromage</b>, basilic</p>
-           <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp3">add_shopping_cart</i>
+           <i class="small iconPanierPopUp material-icons right waves-effect waves-block waves-light" id="ajoutPanierPopUp3">add_shopping_cart</i>
           </div>
          </div>
       </div>
@@ -114,7 +115,7 @@
       <div class="card-content">
         <span class="card-title grey-text text-darken-4">
             <span style="padding : 4px 8px; color:#444;" class="activator"><b>Végétarienne</b></span>
-            <i class="small iconPanier material-icons right" id="ajoutPanier4">add_shopping_cart</i>
+            <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier4">add_shopping_cart</i>
             <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
         </span>
       </div>
@@ -122,7 +123,7 @@
         <span class="card-title grey-text text-darken-4">Végétarienne<i class="material-icons right">close</i></span>
         <div class="modal-content">
           <p>Base tomate, tomate cerise, <b>fromage</b>, basilic</p>
-          <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp4">add_shopping_cart</i>
+          <i class="small iconPanierPopUp material-icons right waves-effect waves-block waves-light" id="ajoutPanierPopUp4">add_shopping_cart</i>
         </div>
       </div>
      </div>
@@ -134,7 +135,7 @@
       <div class="card-content">
       <span class="card-title grey-text text-darken-4">
            <span style="padding : 4px 8px; color:#444;" class="activator"><b>Napolitaine</b></span>
-           <i class="small iconPanier material-icons right" id="ajoutPanier5">add_shopping_cart</i>
+           <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier5">add_shopping_cart</i>
            <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
       </span>
       </div>
@@ -142,11 +143,12 @@
       <span class="card-title grey-text text-darken-4">Napolitaine<i class="material-icons right">close</i></span>
       <div class="modal-content">
          <p>Base tomate, boeuf, mozzarella, <b>fromage</b>, basilic</p>
-         <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp5">add_shopping_cart</i>
+         <i class="small iconPanierPopUp material-icons right waves-effect waves-block waves-light" id="ajoutPanierPopUp5">add_shopping_cart</i>
       </div>
       </div>
     </div>
 
+    <a href="panier.html" class="btn waves-effect waves-block waves-light" id="panier"><i class="material-icons">navigate_next</i></a>
 
 
 
