--- a/html/creationPizza.html
+++ b/html/creationPizza.html
@@ -5,6 +5,7 @@
 		 <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
 		 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		 <link type="text/css" rel="stylesheet" href="../css/css.css"/>
+       <title>Création d'une pizza | Gourmand Pizza</title>
 	  </head>
     	<body id="bodyScroll">
 
@@ -33,9 +34,9 @@
          <!-- Choix de quelle sorte de pizza prendre -->
 
          <div class="btnGroup">
-   			<a href="#" class="btn btnHoraire active">Composition</a>
-   			<a href="favorites.html" class="btn btnHoraire disactive">Favorites</a>
-   			<a href="choixPizza.html" class="btn btnHoraire disactive">Classiques</a>
+   			<a href="#" class="btn btnHoraire active waves-effect waves-block waves-light">Composition</a>
+   			<a href="favorites.html" class="btn btnHoraire disactive waves-effect waves-block waves-light">Favorites</a>
+   			<a href="choixPizza.html" class="btn btnHoraire disactive waves-effect waves-block waves-light">Classiques</a>
    		</div>
 
 
@@ -104,9 +105,9 @@
               </div>
 
           <div class="btnCreaPizza">
-                <a href="panier.html" class="btn"><i class="material-icons">shopping_cart</i></a>
-                <a class="btn disabled" id="ingredPred"><i class="material-icons">navigate_before</i></a>
-                <a class="btn disabled" id="ingredSuivant"><i class="material-icons">navigate_next</i></a>
+                <a href="panier.html" class="btn waves-effect waves-block waves-light"><i class="material-icons">shopping_cart</i></a>
+                <a class="btn disabled waves-effect waves-block waves-light" id="ingredPred"><i class="material-icons">navigate_before</i></a>
+                <a class="btn disabled waves-effect waves-block waves-light" id="ingredSuivant"><i class="material-icons">navigate_next</i></a>
           </div>
 
 
