--- a/html/accueil.html
+++ b/html/accueil.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
     	<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+		<title>Accueil | Gourmand Pizza</title>
 	</head>
 
 	<body>
@@ -43,13 +44,13 @@
 		 <p class="phraseIntro" style="margin-top:23px;"><strong>Où</strong> et <strong>quand</strong> souhaitez-vous votre pizza ?</p>
 
 		<div class="btnGroup">
-			<p class="btn btnHoraire" id="btnOption1">Maintenant</p>
-			<p class="btn btnHoraire" id="btnOption2">19 h 30</p>
-			<p class="btn btnHoraire" id="btnOption3">Plus tard</p>
+			<p class="btn btnHoraire waves-effect waves-block waves-light" id="btnOption1">Maintenant</p>
+			<p class="btn btnHoraire waves-effect waves-block waves-light" id="btnOption2">19 h 30</p>
+			<p class="btn btnHoraire waves-effect waves-block waves-light" id="btnOption3">Plus tard</p>
 		</div>
 		<div id="mapid" class="carte" style="height: 400px; margin:23px 0px;"></div>
 
-		<a class="btn btnNext" href="creationPizza.html"><i class="material-icons">navigate_next</i></a>
+		<a class="btn btnNext waves-effect waves-block waves-light" href="creationPizza.html"><i class="material-icons">navigate_next</i></a>
 
 		<!--JavaScript leaflet-->
 		<script>
