--- a/html/contact.html
+++ b/html/contact.html
@@ -8,8 +8,9 @@
 		 <!--Let browser know website is optimized for mobile-->
 		 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		 <link type="text/css" rel="stylesheet" href="../css/css.css"/>
-     <meta charset="UTF-8">
-	  </head>
+       <meta charset="UTF-8">
+       <title>Contact | Gourmand Pizza</title>
+	   </head>
     	<body>
 
          <!-- Menu -->
@@ -73,7 +74,7 @@
           </div>
         </div>
 
-        
+
         <div>
         <div class="titrePanier">
           <p>FORMULAIRE DE CONTACT</p>
@@ -133,7 +134,7 @@
             <a class="waves-effect waves-light btn btnValideCommande modal-trigger" href="accueil.html">Envoyer le message <i class="large material-icons">send</i></a>
             <a class="waves-effect waves-light btn btnValideCommande modal-trigger red darken-1" href="accueil.html">Retourner au menu <i class="large material-icons">arrow_back</i></a>
           </div>
-        </div>  
+        </div>
 
       <!-- Import de JavaScript -->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
