--- a/html/favorites.html
+++ b/html/favorites.html
@@ -8,8 +8,9 @@
 		 <!--Let browser know website is optimized for mobile-->
 		 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		 <link type="text/css" rel="stylesheet" href="../css/css.css"/>
+       <title>Mes favorites</title>
 	  </head>
-    	<body>
+     <body class="bodyChoix">
 
          <!-- Menu -->
          <nav>
@@ -36,12 +37,14 @@
           <!-- Choix de quelle sorte de pizza prendre -->
 
           <div class="btnGroup">
-    			<a href="creationPizza.html" class="btn btnHoraire disactive">Composition</a>
-    			<a href="#" class="btn btnHoraire active">Favorites</a>
-    			<a href="choixPizza.html" class="btn btnHoraire disactive">Classiques</a>
+    			<a href="creationPizza.html" class="btn btnHoraire disactive waves-effect waves-block waves-light">Composition</a>
+    			<a href="#" class="btn btnHoraire active waves-effect waves-block waves-light">Favorites</a>
+    			<a href="choixPizza.html" class="btn btnHoraire disactive waves-effect waves-block waves-light">Classiques</a>
     		</div>
 
          <p class="phraseIntro">Commandez votre pizza avant <strong>15min </strong><br />et venez la chercher à <strong>19h</strong></p>
+
+         <p class="phraseIntro" style="color:#777; font-size:0.95em"><i>Cette onglet répertorie les pizzas que vous avez déjà composée</i></p>
 
 
           <!-- Choix des pizzas -->
@@ -53,7 +56,7 @@
             <div class="card-content">
               <span class="card-title grey-text text-darken-4">
                  <span style="padding : 4px 8px; color:#444;" class="activator"><b>Pizza 7 fromages</b></span>
-                 <i class="small iconPanier material-icons right" id="ajoutPanier">add_shopping_cart</i>
+                 <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier">add_shopping_cart</i>
                  <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
               </span>
             </div>
@@ -61,7 +64,7 @@
               <span class="card-title grey-text text-darken-4">Pizza 7 fromages<i class="material-icons right">close</i></span>
               <div class="modal-content">
                 <p>Base tomate, pomme de terre, <b>Raclette</b>, <b>Mont d'Or</b>, <b>Parmesan</b>, <b>Mozzarella</b>, <b>Comté</b>, <b>Beaufort</b>, <b>Munster</b>, basilic</p>
-                <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp" style="bottom:-70px">add_shopping_cart</i>
+                <i class="small iconPanierPopUp material-icons right waves-effect waves-block waves-light" id="ajoutPanierPopUp" style="bottom:-70px">add_shopping_cart</i>
              </div>
             </div>
           </div>
@@ -72,16 +75,16 @@
            </div>
            <div class="card-content">
             <span class="card-title grey-text text-darken-4">
-                <span style="padding : 4px 8px; color:#444;" class="activator"><b>Végétarienne</b></span>
-                <i class="small iconPanier material-icons right" id="ajoutPanier2">add_shopping_cart</i>
+                <span style="padding : 4px 8px; color:#444;" class="activator"><b>Pizza de Virginie</b></span>
+                <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier2">add_shopping_cart</i>
                 <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
             </span>
            </div>
            <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Végétarienne<i class="material-icons right">close</i></span>
+            <span class="card-title grey-text text-darken-4">Pizza de Virginie<i class="material-icons right">close</i></span>
             <div class="modal-content">
               <p>Base tomate, tomate cerise, <b>fromage</b>, basilic</p>
-              <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp2">add_shopping_cart</i>
+              <i class="small iconPanierPopUp material-icons right waves-effect waves-block waves-light" id="ajoutPanierPopUp2">add_shopping_cart</i>
             </div>
            </div>
          </div>
@@ -92,16 +95,16 @@
           </div>
           <div class="card-content">
            <span class="card-title grey-text text-darken-4">
-              <span style="padding : 4px 8px; color:#444;" class="activator"><b>Napolitaine</b></span>
-              <i class="small iconPanier material-icons right" id="ajoutPanier3">add_shopping_cart</i>
+              <span style="padding : 4px 8px; color:#444;" class="activator"><b>Pizza 7 fromages</b></span>
+              <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier3">add_shopping_cart</i>
               <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
            </span>
           </div>
           <div class="card-reveal">
-           <span class="card-title grey-text text-darken-4">Napolitaine<i class="material-icons right">close</i></span>
+           <span class="card-title grey-text text-darken-4">Pizza 7 fromages<i class="material-icons right">close</i></span>
            <div class="modal-content">
-            <p>Base tomate, boeuf, mozzarella, <b>fromage</b>, basilic</p>
-            <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp3">add_shopping_cart</i>
+             <p>Base tomate, pomme de terre, <b>Raclette</b>, <b>Mont d'Or</b>, <b>Parmesan</b>, <b>Mozzarella</b>, <b>Comté</b>, <b>Beaufort</b>, <b>Munster</b>, basilic</p>
+             <i class="small iconPanierPopUp material-icons right waves-effect waves-block waves-light" id="ajoutPanierPopUp3" style="bottom:-70px">add_shopping_cart</i>
            </div>
           </div>
        </div>
@@ -112,16 +115,16 @@
        </div>
        <div class="card-content">
          <span class="card-title grey-text text-darken-4">
-             <span style="padding : 4px 8px; color:#444;" class="activator"><b>Végétarienne</b></span>
-             <i class="small iconPanier material-icons right" id="ajoutPanier4">add_shopping_cart</i>
+             <span style="padding : 4px 8px; color:#444;" class="activator"><b>Pizza de Virginie</b></span>
+             <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier4">add_shopping_cart</i>
              <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
          </span>
        </div>
        <div class="card-reveal">
-         <span class="card-title grey-text text-darken-4">Végétarienne<i class="material-icons right">close</i></span>
+         <span class="card-title grey-text text-darken-4">Pizza de Virginie<i class="material-icons right">close</i></span>
          <div class="modal-content">
            <p>Base tomate, tomate cerise, <b>fromage</b>, basilic</p>
-           <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp4">add_shopping_cart</i>
+           <i class="small iconPanierPopUp material-icons right waves-effect waves-block waves-light" id="ajoutPanierPopUp4">add_shopping_cart</i>
          </div>
        </div>
       </div>
@@ -132,63 +135,25 @@
        </div>
        <div class="card-content">
        <span class="card-title grey-text text-darken-4">
-            <span style="padding : 4px 8px; color:#444;" class="activator"><b>Napolitaine</b></span>
-            <i class="small iconPanier material-icons right" id="ajoutPanier5">add_shopping_cart</i>
+            <span style="padding : 4px 8px; color:#444;" class="activator"><b>Pizza 7 fromages</b></span>
+            <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier5">add_shopping_cart</i>
             <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
        </span>
        </div>
        <div class="card-reveal">
-       <span class="card-title grey-text text-darken-4">Napolitaine<i class="material-icons right">close</i></span>
+       <span class="card-title grey-text text-darken-4">Pizza 7 fromages<i class="material-icons right">close</i></span>
        <div class="modal-content">
-          <p>Base tomate, boeuf, mozzarella, <b>fromage</b>, basilic</p>
-          <i class="small iconPanierPopUp material-icons right" id="ajoutPanierPopUp5">add_shopping_cart</i>
+          <p>Base tomate, pomme de terre, <b>Raclette</b>, <b>Mont d'Or</b>, <b>Parmesan</b>, <b>Mozzarella</b>, <b>Comté</b>, <b>Beaufort</b>, <b>Munster</b>, basilic</p>
+          <i class="small iconPanierPopUp material-icons right waves-effect waves-block waves-light" id="ajoutPanierPopUp5" style="bottom:-70px">add_shopping_cart</i>
        </div>
        </div>
      </div>
 
-
-
-
-        <!-- Modal Structure -->
-        <div id="modal1" class="modal">
-         <div class="modal-content">
-           <p>Tomate, mozzarella, <b>fromage</b>, basilic</p>
-         </div>
-         <div class="modal-footer">
-           <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Ajouter</a>
-         </div>
-        </div>
-
-        <div id="modal2" class="modal">
-         <div class="modal-content">
-           <p>Tomate, mozzarella, <b>fromage</b>, basilic</p>
-         </div>
-         <div class="modal-footer">
-           <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat"><i class="large material-icons">add_box</i></a>
-         </div>
-        </div>
-
-        <div id="modal3" class="modal">
-         <div class="modal-content">
-           <p>Tomate, mozzarella, <b>fromage</b>, basilic</p>
-         </div>
-         <div class="modal-footer">
-           <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat"><i class="large material-icons">add_box</i></a>
-         </div>
-        </div>
-
-        <div id="modal4" class="modal">
-         <div class="modal-content">
-           <p>Tomate, mozzarella, <b>fromage</b>, basilic</p>
-         </div>
-         <div class="modal-footer">
-           <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat"><i class="large material-icons" Large>add_box</i></a>
-         </div>
-        </div>
+     <a href="panier.html" class="btn waves-effect waves-block waves-light" id="panier"><i class="material-icons">navigate_next</i></a>
 
       <!-- Import de JavaScript -->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
-		<script type="text/javascript" src="../js/js.js"></script>
+		<script type="text/javascript" src="../js/choixPizza.js"></script>
     </body>
   </html>
