--- a/html/panier.html
+++ b/html/panier.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
     	<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
     	<meta charset="UTF-8">
+		<title>Mon panier | Gourmand Pizza</title>
 	</head>
 
 	<body>
@@ -44,60 +45,91 @@
 	  		<p>PANIER</p>
 	  	</div>
 
-		<div class="groupe1 grey lighten-4">
-			<div class="row groupPanier itemPizza">
-				<p class="col s7 itemPanier nameItem">Pizza 4 fromage</p>
+		<div class="groupe1 grey lighten-4 conteneurDuPanier">
+			<div class="row groupPanier itemPizzaComposee">
+				<p class="col s7 itemPanier nameItem">Pizza de Paul</p>
 				<p class="col s2 itemPanier qteItem"> X 1 </p>
+				<p class="col s3 itemPanier prixItem"> 8.30 € </p>
+			</div>
+			<div class="row groupPanier itemPizzaComposee">
+				<p class="col s7 itemPanier nameItem">Pizza de Françoise</p>
+				<p class="col s2 itemPanier qteItem"> X 1 </p>
+				<p class="col s3 itemPanier prixItem"> 9.60 € </p>
+			</div>
+			<div class="row groupPanier itemPizzaComposee">
+				<p class="col s7 itemPanier nameItem">Pizza de Florian</p>
+				<p class="col s2 itemPanier qteItem"> X 1 </p>
+				<p class="col s3 itemPanier prixItem"> 7.80 € </p>
+			</div>
+			<div class="row groupPanier itemPizzaClassique"> <!-- Elle a une couleur différente parce que c'est pas une pizza composée -->
+				<p class="col s7 itemPanier nameItem">Pepperonie</p>
+				<p class="col s2 itemPanier qteItem"> X 2 </p>
 				<p class="col s3 itemPanier prixItem"> 8.00 € </p>
 			</div>
-			<div class="row groupPanier itemPizza">
-				<p class="col s7 itemPanier nameItem">Pizza 4 fromage</p>
-				<p class="col s2 itemPanier qteItem"> X 2 </p>
-				<p class="col s3 itemPanier prixItem"> 10.00 € </p>
-			</div>
-			<div class="row groupPanier itemPizza">
-				<p class="col s7 itemPanier nameItem">Pizza 4 fromage</p>
-				<p class="col s2 itemPanier qteItem"> X 1 </p>
-				<p class="col s3 itemPanier prixItem"> 7.00 € </p>
+		</div>
+
+		<div class="addPizza grey lighten-4 conteneurDuPanier">
+			<div class="row groupPanier">
+				<div class="col s12">
+					<p class="itemPanier addPizza">NOUVELLE PIZZA</p>
+					<a href="creationPizza.html" class="col s1 btn-floating btn-medium red lighten-1 waves-effect waves-block waves-lightred right" id="btnAdd"><i class="material-icons">add</i></a>
+				</div>
 			</div>
 		</div>
 
-		<div class="addPizza grey lighten-4">
+		<div class="groupeMontant grey lighten-4 conteneurDuPanier">
 			<div class="row groupPanier">
-				<p class="col s8 itemPanier addPizza">NOUVELLE PIZZA</p>
-				<a href="choixPizza.html" class="col s2 btn-floating btn-medium waves-effect waves-light red" id="btnAdd"><i class="material-icons">add</i></a>
+				<div class="col s12">
+					<p class="itemPanier montantItem">MONTANT</p>
+					<p class="itemPanier prixItem right"> 41.70 € </p>
+				</div>
 			</div>
 		</div>
 
-		<div class="groupeMontant grey lighten-4">
-			<div class="row groupPanier">
-				<p class="col s9 itemPanier montantItem">MONTANT</p>
-				<p class="col s3 itemPanier prixItem"> 35.00 € </p>
-			</div>
-		</div>
 
-		<div class="groupeEch grey lighten-4">
+
+		<div class="groupeEch grey lighten-4 conteneurDuPanier">
 			<div class="row groupPanier">
-				<p class="col s8 itemPanier titreEchant">Echantillons</p>
-				<a href="choixPizza.html" class="col s2 btn-floating btn-medium waves-effect waves-light red" id="btnAdd"><i class="material-icons">add</i></a>
-				<a href="choixPizza.html" class="col s2 btn-floating btn-medium waves-effect waves-light red" id="btnAdd"><i class="material-icons">add</i></a>
+				<div class="col s12">
+					<p class="itemPanier titreEchant">2 échantillons offerts : composez-les</p>
+					<a href="creationPizza.html" class="col s1 btn-floating btn-medium waves-effect waves-light green right" style="margin-left :4px;" id="btnAdd"><i class="material-icons">add</i></a>
+					<a href="creationPizza.html" class="col s1 btn-floating btn-medium waves-effect waves-light green right" id="btnAdd"><i class="material-icons">add</i></a>
+				</div>
 			</div>
 		</div>
 
 		<!--<a class="btn btnNext" href="creationPizza.html">VALIDER LA COMMANDE</a>-->
 		<!-- Modal Trigger -->
-		  <a class="waves-effect waves-light btn btnValideCommande modal-trigger" href="#modal1">Valider la commande</a>
+		<div class="conteneurDuPanier">
+			<a class="waves-effect waves-light btn btnValideCommande modal-trigger" href="#modal1">Valider la commande</a>
+		</div>
+
 
 		  <!-- Modal Structure -->
 		  <div id="modal1" class="modal">
 		    <div class="modal-content">
-		      <h4>TOTAL 21.00€</h4>
+		      <h4>TOTAL 41.70€</h4>
+				<p>Gourmand Pizza Gare - 19h30 </p>
+					<div class="row groupPanier itemPizzaComposee ">
+						<p class="itemPanier nameItem popUpFinal">1 Pizza de Paul</p>
+					</div>
+					<div class="row groupPanier itemPizzaComposee">
+						<p class="itemPanier nameItem popUpFinal">1 Pizza de Françoise</p>
+					</div>
+					<div class="row groupPanier itemPizzaComposee">
+						<p class="itemPanier nameItem popUpFinal">1 Pizza de Florian</p>
+
+					</div>
+					<div class="row groupPanier itemPizzaClassique"> <!-- Elle a une couleur différente parce que c'est pas une pizza composée -->
+						<p class="itemPanier nameItem popUpFinal">2 Pepperonie</p>
+					</div>
 		    </div>
 		    <div class="modal-footer">
-		      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Valider</a>
-		      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Retourner au panier</a>
+				<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Retour</a>
+		      <a class="modal-action modal-close waves-effect waves-green btn-flat" onclick="M.toast({html: 'Commande validée : <b>Gare</b> - <b>19h30</b>'})" style="color:#64dd17">Valider</a>
 		    </div>
 		  </div>
+
 
 		  <!-- Import de JavaScript -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
