--- a/html/compte.html
+++ b/html/compte.html
@@ -29,7 +29,6 @@
           </nav>
 
           <ul class="sidenav" id="mobile-demo">
-             <!-- JE PENSE QU'IL FAUDRAIT RAJOUTER L'ACCUEIL NON ? -->
             <li class="compteNav"><a href="#"><i class="small material-icons">contacts</i>Compte</a></li>
             <li class="contactNav"><a href="#"><i class="small material-icons">local_phone</i>Contact</a></li>
             <li class="ingredientNav"><a href="#"><i class="small material-icons">restaurant_menu</i>Ingrédient</a></li>
@@ -45,7 +44,7 @@
 
           <div class="row">
 
-          <div class="contact col s12">
+          <div class="contact col s12 conteneurCompte">
             <div class="row groupPanier">
                <div class="col s4">
                    <p class="itemPanier nameItem right"><i class="material-icons">face</i></p>
@@ -88,7 +87,7 @@
             </div>
           </div>
 
-          <a class="waves-effect waves-light btn btnValideCommande modal-trigger waves-effect waves-block waves-light col s12" href="accueil.html"><i class="large material-icons">navigate_before</i></a>
+          <a class="waves-effect waves-light btn btnValideCommande modal-trigger waves-effect waves-block waves-light col s12 conteneurCompte" href="accueil.html"><i class="large material-icons">navigate_before</i></a>
 
        </div>
 
@@ -96,5 +95,6 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
 		<script type="text/javascript" src="../js/js.js"></script>
+      <script type="text/javascript" src="../js/nav.js"></script>
     </body>
   </html>
