--- a/html/contact.html
+++ b/html/contact.html
@@ -29,10 +29,13 @@
           </nav>
 
           <ul class="sidenav" id="mobile-demo">
+             <!-- JE PENSE QU'IL FAUDRAIT RAJOUTER L'ACCUEIL NON ? -->
             <li class="compteNav"><a href="compte.html"><i class="small material-icons">contacts</i>Compte</a></li>
             <li class="contactNav"><a href="#"><i class="small material-icons">local_phone</i>Contact</a></li>
             <li class="ingredientNav"><a href="#"><i class="small material-icons">restaurant_menu</i>Ingrédient</a></li>
-            <li class="decoNav"><a href="#"><i class="small material-icons">settings_power</i>Deconnexion</a></li>
+            <!-- T'inquière laisse la co et deco - sans mettre d'href => c'est des petits toasts -->
+            <li class="decoNav pasDansLeMenu" id="navCo"><a onclick="M.toast({html: 'Vous êtes connecté'})"><i class="small material-icons">settings_power</i>Connexion</a></li>
+            <li class="decoNav" id="navDeco"><a onclick="M.toast({html: 'Vous êtes déconnecté'})"><i class="small material-icons">settings_power</i>Deconnexion</a></li>
           </ul>
 
           <!-- Contenu de la page -->
@@ -48,27 +51,27 @@
 
           <div class="groupe1 grey lighten-5">
             <div class="row groupResto">
-              <p class="col s7 itemPanier nameItem"><i class="tiny material-icons">restaurant</i> Restaurant 1 </p>
+              <p class="col s7 itemPanier nameItem"><i class="tiny material-icons">restaurant</i> Gare </p>
               <p class="col s5 itemPanier qteItem"><i class="tiny material-icons">phone</i> 0123456789</p>
               <p class="col s12" id="adresse"><i class="tiny material-icons">place</i> Adresse blablablablabla resto 1</p>
             </div>
             <div class="row groupResto">
-              <p class="col s7 itemPanier nameItem"><i class="tiny material-icons">restaurant</i> Restaurant 2 </p>
+              <p class="col s7 itemPanier nameItem"><i class="tiny material-icons">restaurant</i> Maxéville</p>
               <p class="col s5 itemPanier qteItem"><i class="tiny material-icons">phone</i> 0123456789</p>
               <p class="col s12" id="adresse"><i class="tiny material-icons">place</i>Adresse blablablablabla resto 1</p>
             </div>
             <div class="row groupResto">
-              <p class="col s7 itemPanier nameItem"><i class="tiny material-icons">restaurant</i> Restaurant 3 </p>
+              <p class="col s7 itemPanier nameItem"><i class="tiny material-icons">restaurant</i> Jarville </p>
               <p class="col s5 itemPanier qteItem"><i class="tiny material-icons">phone</i> 0123456789</p>
               <p class="col s12" id="adresse"><i class="tiny material-icons">place</i>Adresse blablablablabla resto 1</p>
             </div>
             <div class="row groupResto">
-              <p class="col s7 itemPanier nameItem"><i class="tiny material-icons">restaurant</i> Restaurant 4 </p>
+              <p class="col s7 itemPanier nameItem"><i class="tiny material-icons">restaurant</i> Pepinière</p>
               <p class="col s5 itemPanier qteItem"><i class="tiny material-icons">phone</i> 0123456789</p>
               <p class="col s12" id="adresse"><i class="tiny material-icons">place</i>Adresse blablablablabla resto 1</p>
             </div>
             <div class="row groupResto">
-              <p class="col s7 itemPanier nameItem"><i class="tiny material-icons">restaurant</i> Restaurant 5 </p>
+              <p class="col s7 itemPanier nameItem"><i class="tiny material-icons">restaurant</i>Essey-les-Nancy</p>
               <p class="col s5 itemPanier qteItem"><i class="tiny material-icons">phone</i> 0123456789</p>
               <p class="col s12" id="adresse"><i class="tiny material-icons">place</i>Adresse blablablablabla resto 1</p>
           </div>
@@ -82,7 +85,6 @@
 
           <div class="row">
             <form class="col s12">
-              <div class="row">
                 <div class="input-field col s6">
                   <input id="nom" type="text">
                   <label for="nom">NOM *</label>
@@ -90,7 +92,6 @@
                 <div class="input-field col s6">
                   <input id="prenom" type="text">
                   <label for="prenom">PRENOM *</label>
-                </div>
               </div>
               <div class="input-field col s6">
                 <input id="telephone" type="text">
@@ -131,8 +132,8 @@
           </div>
 
           <div>
-            <a class="waves-effect waves-light btn btnValideCommande modal-trigger" href="accueil.html">Envoyer le message <i class="large material-icons">send</i></a>
-            <a class="waves-effect waves-light btn btnValideCommande modal-trigger red darken-1" href="accueil.html">Retourner au menu <i class="large material-icons">arrow_back</i></a>
+            <a class="waves-effect waves-light btn btnValideCommande modal-trigger" href="accueil.html"><i class="large material-icons">send</i></a>
+            <a class="waves-effect waves-light btn btnValideCommande modal-trigger red darken-1" href="accueil.html"><i class="large material-icons">navigate_before</i></a>
           </div>
         </div>
 
@@ -140,5 +141,6 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
 		<script type="text/javascript" src="../js/js.js"></script>
+      <script type="text/javascript" src="../js/nav.js"></script>
     </body>
   </html>
