--- a/html/accueil.html
+++ b/html/accueil.html
@@ -82,5 +82,6 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
 		<script type="text/javascript" src="../js/js.js"></script>
+		<script type="text/javascript" src="../js/nav.js"></script>
 	</body>
 </html>
