--- a/html/creationPizza.html
+++ b/html/creationPizza.html
@@ -115,5 +115,6 @@
        <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
        <script type="text/javascript" src="../js/materialize.min.js"></script>
  		<script type="text/javascript" src="../js/creationPizza.js"></script>
+      <script type="text/javascript" src="../js/nav.js"></script>
     </body>
   </html>
