--- a/html/panier.html
+++ b/html/panier.html
@@ -134,6 +134,7 @@
 		  <!-- Import de JavaScript -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="../js/materialize.min.js"></script>
-  		<script type="text/javascript" src="../js/js.js"></script>
+  		  <script type="text/javascript" src="../js/js.js"></script>
+		  <script type="text/javascript" src="../js/nav.js"></script>
 	</body>
 </html>
