--- a/html/favorites.html
+++ b/html/favorites.html
@@ -28,10 +28,11 @@
           </nav>
 
           <ul class="sidenav" id="mobile-demo">
-              <li><a href="#">Compte</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Ingrédient</a></li>
-              <li><a href="#">Deconnexion</a></li>
+            <li class="compteNav"><a href="compte.html"><i class="small material-icons">contacts</i>Compte</a></li>
+            <li class="contactNav"><a href="contact.html"><i class="small material-icons">local_phone</i>Contact</a></li>
+            <li class="ingredientNav"><a href="ingredient.html"><i class="small material-icons">restaurant_menu</i>Ingrédient</a></li>
+            <li class="decoNav pasDansLeMenu" id="navCo"><a onclick="M.toast({html: 'Vous êtes connecté'})"><i class="small material-icons">settings_power</i>Connexion</a></li>
+            <li class="decoNav" id="navDeco"><a onclick="M.toast({html: 'Vous êtes déconnecté'})"><i class="small material-icons">settings_power</i>Deconnexion</a></li>
           </ul>
 
           <!-- Choix de quelle sorte de pizza prendre -->
@@ -155,6 +156,5 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
 		<script type="text/javascript" src="../js/choixPizza.js"></script>
-      <script type="text/javascript" src="../js/nav.js"></script>
     </body>
   </html>
