--- a/html/contact.html
+++ b/html/contact.html
@@ -17,7 +17,7 @@
          <nav>
               <div class="nav-wrapper">
                 <img src="">
-                   <a href="index.html" class="brand-logo" id="titre">Gourmand pizza</a>
+                   <a href="accueil.html" class="brand-logo" id="titre">Gourmand pizza</a>
                    <a href="#" data-target="mobile-demo" class="right sidenav-trigger"><i class="material-icons">menu</i></a>
                    <ul class="right hide-on-med-and-down">
                      <li><a href="#">Compte</a></li>
