--- a/html/boissons.html
+++ b/html/boissons.html
@@ -16,7 +16,7 @@
          <nav>
               <div class="nav-wrapper">
                 <img src="">
-                   <a href="index.html" class="brand-logo" id="titre">Gourmand pizza</a>
+                   <a href="accueil.html" class="brand-logo" id="titre">Gourmand pizza</a>
                    <a href="#" data-target="mobile-demo" class="right sidenav-trigger"><i class="material-icons">menu</i></a>
                    <ul class="right hide-on-med-and-down">
                      <li><a href="#">Compte</a></li>
@@ -44,6 +44,7 @@
            <div class="card-content">
              <span class="card-title grey-text text-darken-4">
                 <span style="padding : 4px 8px; color:#444;"><b>Ice Tea</b></span>
+                <span style="margin-left : 120px; color:#444; font-size:0.8em;" class="activator"><b>1,0€</b></span>
                 <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier2">add_shopping_cart</i>
              </span>
            </div>
@@ -57,6 +58,7 @@
           <div class="card-content">
            <span class="card-title grey-text text-darken-4">
                <span style="padding : 4px 8px; color:#444;"><b>Coca</b></span>
+               <span style="margin-left : 120px; color:#444; font-size:0.8em;" class="activator"><b>1,0€</b></span>
                <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier3">add_shopping_cart</i>
            </span>
           </div>
@@ -69,6 +71,7 @@
          <div class="card-content">
           <span class="card-title grey-text text-darken-4">
              <span style="padding : 4px 8px; color:#444;"><b>Ice Tea</b></span>
+             <span style="margin-left : 120px; color:#444; font-size:0.8em;" class="activator"><b>1,0€</b></span>
              <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier4">add_shopping_cart</i>
           </span>
          </div>
@@ -81,6 +84,7 @@
         <div class="card-content">
           <span class="card-title grey-text text-darken-4">
              <span style="padding : 4px 8px; color:#444;"><b>Coca</b></span>
+             <span style="margin-left : 120px; color:#444; font-size:0.8em;" class="activator"><b>1,0€</b></span>
              <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier5">add_shopping_cart</i>
           </span>
         </div>
@@ -94,6 +98,7 @@
         <div class="card-content">
          <span class="card-title grey-text text-darken-4">
              <span style="padding : 4px 8px; color:#444;"><b>Ice Tea</b></span>
+             <span style="margin-left : 120px; color:#444; font-size:0.8em;" class="activator"><b>1,0€</b></span>
              <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier">add_shopping_cart</i>
          </span>
         </div>
