--- a/html/choixPizza.html
+++ b/html/choixPizza.html
@@ -17,7 +17,7 @@
          <nav>
               <div class="nav-wrapper">
                 <img src="">
-                   <a href="index.html" class="brand-logo" id="titre">Gourmand pizza</a>
+                   <a href="accueil.html" class="brand-logo" id="titre">Gourmand pizza</a>
                    <a href="#" data-target="mobile-demo" class="right sidenav-trigger"><i class="material-icons">menu</i></a>
                    <ul class="right hide-on-med-and-down">
                      <li><a href="#">Compte</a></li>
@@ -56,6 +56,7 @@
            <div class="card-content">
              <span class="card-title grey-text text-darken-4">
                 <span style="padding : 4px 8px; color:#444;" class="activator"><b>Napolitaine</b></span>
+                <span style="margin-left : 28px; color:#444; font-size:0.8em;" class="activator"><b>7,0€</b></span>
                 <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier">add_shopping_cart</i>
                 <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
              </span>
@@ -76,6 +77,7 @@
           <div class="card-content">
            <span class="card-title grey-text text-darken-4">
                <span style="padding : 4px 8px; color:#444;" class="activator"><b>Végétarienne</b></span>
+               <span style="margin-left : 10px; color:#444; font-size:0.8em;" class="activator"><b>8,0€</b></span>
                <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier2">add_shopping_cart</i>
                <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
            </span>
@@ -96,6 +98,7 @@
          <div class="card-content">
           <span class="card-title grey-text text-darken-4">
              <span style="padding : 4px 8px; color:#444;" class="activator"><b>Napolitaine</b></span>
+             <span style="margin-left : 28px; color:#444; font-size:0.8em;" class="activator"><b>7,0€</b></span>
              <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier3">add_shopping_cart</i>
              <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
           </span>
@@ -116,6 +119,7 @@
       <div class="card-content">
         <span class="card-title grey-text text-darken-4">
             <span style="padding : 4px 8px; color:#444;" class="activator"><b>Végétarienne</b></span>
+            <span style="margin-left : 10px; color:#444; font-size:0.8em;" class="activator"><b>8,0€</b></span>
             <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier4">add_shopping_cart</i>
             <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
         </span>
@@ -136,6 +140,7 @@
       <div class="card-content">
       <span class="card-title grey-text text-darken-4">
            <span style="padding : 4px 8px; color:#444;" class="activator"><b>Napolitaine</b></span>
+           <span style="margin-left : 28px; color:#444; font-size:0.8em;" class="activator"><b>7,0€</b></span>
            <i class="small iconPanier material-icons right waves-effect waves-block waves-light" id="ajoutPanier5">add_shopping_cart</i>
            <span class="activator"><i class="small material-icons right" style="padding : 4px 8px; color:#444;">more_vert</i></span>
       </span>
