--- a/html/contact.html
+++ b/html/contact.html
@@ -75,7 +75,13 @@
           </div>
         </div>
 
+          <div>
+            <a class="waves-effect waves-light btn btnValideCommande modal-trigger" href="#modal4"><i class="large material-icons">add_box</i></a>
+            <a class="waves-effect waves-light btn btnValideCommande modal-trigger red darken-1" href="accueil.html"><i class="large material-icons">navigate_before</i></a>
+          </div>
+        </div>
 
+        <div id="modal4" class="modal">
         <div>
         <div class="titrePanier">
           <p>FORMULAIRE DE CONTACT</p>
@@ -83,6 +89,7 @@
 
           <div class="row">
             <form class="col s12">
+              <div class="row">
                 <div class="input-field col s6">
                   <input id="nom" type="text">
                   <label for="nom">NOM *</label>
@@ -90,6 +97,7 @@
                 <div class="input-field col s6">
                   <input id="prenom" type="text">
                   <label for="prenom">PRENOM *</label>
+                </div>
               </div>
               <div class="input-field col s6">
                 <input id="telephone" type="text">
@@ -100,28 +108,6 @@
                 <label for="mail">MAIL *</label>
               </div>
 
-
-              <!--<div class="input-field col s12">
-                <select>
-                  <option value="66" disabled selected>CATEGORIE * </option>
-                  <option value="1">Option 1</option>
-                  <option value="2">Option 2</option>
-                  <option value="3">Option 3</option>
-                </select>
-                <label>Materialize Select</label>
-              </div>
-
-              <div class="input-field col s12">
-                <select>
-                  <option value="" disabled selected>VOTRE RESTAURANT * </option>
-                  <option value="1">Option 1</option>
-                  <option value="2">Option 2</option>
-                  <option value="3">Option 3</option>
-                </select>
-                <label>Materialize Select</label>
-              </div>-->
-
-
               <div class="input-field col s12">
                 <input id="message" type="text">
                 <label for="message">MESSAGE *</label>
@@ -130,10 +116,8 @@
           </div>
 
           <div>
-            <a class="waves-effect waves-light btn btnValideCommande modal-trigger" href="accueil.html"><i class="large material-icons">send</i></a>
-            <a class="waves-effect waves-light btn btnValideCommande modal-trigger red darken-1" href="accueil.html"><i class="large material-icons">navigate_before</i></a>
+            <a class="waves-effect waves-light btn btnValideCommande modal-trigger" href="contact.html"><i class="large material-icons">send</i></a>
           </div>
-        </div>
 
       <!-- Import de JavaScript -->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
